--- a/flasktest/config.json
+++ b/flasktest/config.json
@@ -16,7 +16,7 @@
     "ssh_e_jurnal_host": "94.20.43.43",
     "ssh_e_jurnal_port": 2002,
     "ssh_e_jurnal_username": "root",
-    "ssh_e_jurnal_password": "t%RbG6=3Hh",
+    "ssh_e_jurnal_password": "G@hjkm001!@#$",
     "users": {
         "super-user": {
             "username": "super-user",
